Fix bug where witness images overflow on small devices by adding flex-wrap property

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -187,6 +187,7 @@ header img {
 
 #hints {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
 }
 
